# rat

./: LICENSE.txt  README-test.ipynb  README.md  Test Notebook.ipynb  Test.ipynb  setup.cfg  setup.py  test.py  комментарий.txt
.eggs/cvxpy-1.1.18-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD  requires.txt
.eggs/ecos-2.0.10-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD
.eggs/numpy-1.22.1-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD
.eggs/osqp-0.6.2.post5-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD  requires.txt
.eggs/pandas-1.4.0-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD  requires.txt
.eggs/qdldl-0.1.5.post0-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD
.eggs/scipy-1.7.3-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD
.eggs/scs-3.1.0-py3.10-linux-x86_64.egg/EGG-INFO/: PKG-INFO  RECORD
.ipynb_checkpoints/: Test-checkpoint.ipynb
rat/: ratedit.py  ratmath.py  ratrestore.py
rat/rat.egg-info/: PKG-INFO  SOURCES.txt
rat/rat_zimfv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rat/tabular_rat_zimfv.egg-info/: PKG-INFO  SOURCES.txt
tables/: README.md  employment.csv  environment.csv  family.csv
tables/.ipynb_checkpoints/: Generate tables-checkpoint.ipynb
