[metadata]
name = "tabularrat"
version = 0.0.2
author = "Fedor Zimin"
author_email = "zimfv@yandex.ru"
description = "RAT - Restoring Aggregated Tables"
long_description = file: README.md
long_description_content_type= text/markdown
url = "https://github.com/zimfv/rat"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = rat
packages = find:
python_requires = ">=3.6"
install_requires=[
    "numpy >= 1.15", 
    "scipy >= 1.1.0", 
    "pandas >= 1.3.5", 
    "cvxpy >= 1.1.18"
]

[options.packages.find]
where = rat